# pokemmo-progression-tracker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  README.md  alembic.ini  build.bat  build.ps1  pyproject.toml  requirements.txt  run.bat  run.ps1  setup.py  todo.py  verify_build.py
.github/workflows/: ci.yml
assets/: README.md
data/: guide_johto.json  guide_kanto.json
migrations/: env.py  script.py.mako
migrations/versions/: 0001_create_guides_tables.py
pokemmo_companion/: __init__.py  app.py
pokemmo_companion/core/: __init__.py  db.py  models.py
pokemmo_companion/core/services/: __init__.py  guide_loader.py
pokemmo_companion/ui/: __init__.py  guides_view.py  main_window.py
scripts/: import_guides.py
tests/: __init__.py  conftest.py  test_guide_loader.py
