[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemmo-companion"
version = "0.1.0"
description = "A non-intrusive PokeMMO companion app for planning and tracking progress"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PokeMMO Companion Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5.0",
    "sqlmodel>=0.0.14",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.3.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
pokemmo-companion = "pokemmo_companion.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pokemmo_companion*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=pokemmo_companion",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.pyinstaller]
# PyInstaller configuration for creating single executable
onefile = true
windowed = true
name = "PokeMMO Companion"
icon = "assets/icon.ico"
add-data = [
    "data=data",
    "migrations=migrations"
]
hidden-import = [
    "sqlalchemy.sql.default_comparator",
    "sqlalchemy.dialects.sqlite",
    "alembic",
    "pydantic"
]
excludes = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "tkinter"
]
